added some ideas

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2540,6 +2540,7 @@
   WNC_ruler_ADJ:0 "Washington Enclave"
   WNC_ruler_DEF:0 "Washington Enclave"
 
+### TEXAS REWORK
 
   ORR_elites:0 "New Orleans Raiders"
   ORR_elites_ADJ:0 "New Orleans Raiders"
