--- a/localisation/english/fallout_cosmetic_tags_l_english.yml
+++ b/localisation/english/fallout_cosmetic_tags_l_english.yml
@@ -778,112 +778,6 @@
   LNS_cool_intellectuals_ADJ:0 "Texas Tyranny"
   LNS_cool_intellectuals_DEF:0 "Texas Tyranny"
 
-  TEX_provisional_elites:0 "Provisional Republic of Texas"
-  TEX_provisional_elites_ADJ:0 "Provisional Republic of Texas"
-  TEX_provisional_elites_DEF:0 "the Provisional Republic of Texas"
-  TEX_provisional_intellectuals:0 "Provisional Republic of Texas"
-  TEX_provisional_intellectuals_ADJ:0 "Provisional Republic of Texas"
-  TEX_provisional_intellectuals_DEF:0 "the Provisional Republic of Texas"
-  TEX_provisional_people:0 "Provisional Republic of Texas"
-  TEX_provisional_people_ADJ:0 "Provisional Republic of Texas"
-  TEX_provisional_people_DEF:0 "the Provisional Republic of Texas"
-  TEX_provisional_ruler:0 "Provisional Republic of Texas"
-  TEX_provisional_ruler_ADJ:0 "Provisional Republic of Texas"
-  TEX_provisional_ruler_DEF:0 "the Provisional Republic of Texas"
-
-  TEX_LNS_elites:0 "Provisional Republic of Texas"
-  TEX_LNS_elites_ADJ:0 "Provisional Republic of Texas"
-  TEX_LNS_elites_DEF:0 "the Provisional Republic of Texas"
-  TEX_LNS_intellectuals:0 "Provisional Republic of Texas"
-  TEX_LNS_intellectuals_ADJ:0 "Provisional Republic of Texas"
-  TEX_LNS_intellectuals_DEF:0 "the Provisional Republic of Texas"
-  TEX_LNS_people:0 "Provisional Republic of Texas"
-  TEX_LNS_people_ADJ:0 "Provisional Republic of Texas"
-  TEX_LNS_people_DEF:0 "the Provisional Republic of Texas"
-  TEX_LNS_ruler:0 "Provisional Republic of Texas"
-  TEX_LNS_ruler_ADJ:0 "Provisional Republic of Texas"
-  TEX_LNS_ruler_DEF:0 "the Provisional Republic of Texas"
-
-  TEX_stateflag_elites:0 "Provisional Republic of Texas"
-  TEX_stateflag_elites_ADJ:0 "Provisional Republic of Texas"
-  TEX_stateflag_elites_DEF:0 "the Provisional Republic of Texas"
-  TEX_stateflag_intellectuals:0 "Provisional Republic of Texas"
-  TEX_stateflag_intellectuals_ADJ:0 "Provisional Republic of Texas"
-  TEX_stateflag_intellectuals_DEF:0 "the Provisional Republic of Texas"
-  TEX_stateflag_people:0 "Provisional Republic of Texas"
-  TEX_stateflag_people_ADJ:0 "Provisional Republic of Texas"
-  TEX_stateflag_people_DEF:0 "the Provisional Republic of Texas"
-  TEX_stateflag_ruler:0 "Provisional Republic of Texas"
-  TEX_stateflag_ruler_ADJ:0 "Provisional Republic of Texas"
-  TEX_stateflag_ruler_DEF:0 "the Provisional Republic of Texas"
-
-  TEX_chile_elites:0 "Provisional Republic of Texas"
-  TEX_chile_elites_ADJ:0 "Provisional Republic of Texas"
-  TEX_chile_elites_DEF:0 "the Provisional Republic of Texas"
-  TEX_chile_intellectuals:0 "Provisional Republic of Texas"
-  TEX_chile_intellectuals_ADJ:0 "Provisional Republic of Texas"
-  TEX_chile_intellectuals_DEF:0 "the Provisional Republic of Texas"
-  TEX_chile_people:0 "Provisional Republic of Texas"
-  TEX_chile_people_ADJ:0 "Provisional Republic of Texas"
-  TEX_chile_people_DEF:0 "the Provisional Republic of Texas"
-  TEX_chile_ruler:0 "Provisional Republic of Texas"
-  TEX_chile_ruler_ADJ:0 "Provisional Republic of Texas"
-  TEX_chile_ruler_DEF:0 "the Provisional Republic of Texas"
-
-  TEX_proper_chile_elites:0 "Republic of Texas"
-  TEX_proper_chile_elites_ADJ:0 "epublic of Texas"
-  TEX_proper_chile_elites_DEF:0 "the Republic of Texas"
-  TEX_proper_chile_intellectuals:0 "Republic of Texas"
-  TEX_proper_chile_intellectuals_ADJ:0 "Republic of Texas"
-  TEX_proper_chile_intellectuals_DEF:0 "the Republic of Texas"
-  TEX_proper_chile_people:0 "Republic of Texas"
-  TEX_proper_chile_people_ADJ:0 "Republic of Texas"
-  TEX_proper_chile_people_DEF:0 "the Republic of Texas"
-  TEX_proper_chile_ruler:0 "Republic of Texas"
-  TEX_proper_chile_ruler_ADJ:0 "Republic of Texas"
-  TEX_proper_chile_ruler_DEF:0 "the Republic of Texas"
-
-  TEX_proper_LNS_elites:0 "Republic of Texas"
-  TEX_proper_LNS_elites_ADJ:0 "epublic of Texas"
-  TEX_proper_LNS_elites_DEF:0 "the Republic of Texas"
-  TEX_proper_LNS_intellectuals:0 "Republic of Texas"
-  TEX_proper_LNS_intellectuals_ADJ:0 "Republic of Texas"
-  TEX_proper_LNS_intellectuals_DEF:0 "the Republic of Texas"
-  TEX_proper_LNS_people:0 "Republic of Texas"
-  TEX_proper_LNS_people_ADJ:0 "Republic of Texas"
-  TEX_proper_LNS_people_DEF:0 "the Republic of Texas"
-  TEX_proper_LNS_ruler:0 "Republic of Texas"
-  TEX_proper_LNS_ruler_ADJ:0 "Republic of Texas"
-  TEX_proper_LNS_ruler_DEF:0 "the Republic of Texas"
-
-  TEX_proper_elites:0 "Republic of Texas"
-  TEX_proper_elites_ADJ:0 "epublic of Texas"
-  TEX_proper_elites_DEF:0 "the Republic of Texas"
-  TEX_proper_intellectuals:0 "Republic of Texas"
-  TEX_proper_intellectuals_ADJ:0 "Republic of Texas"
-  TEX_proper_intellectuals_DEF:0 "the Republic of Texas"
-  TEX_proper_people:0 "Republic of Texas"
-  TEX_proper_people_ADJ:0 "Republic of Texas"
-  TEX_proper_people_DEF:0 "the Republic of Texas"
-  TEX_proper_ruler:0 "Republic of Texas"
-  TEX_proper_ruler_ADJ:0 "Republic of Texas"
-  TEX_proper_ruler_DEF:0 "the Republic of Texas"
-
-  TEX_proper_stateflag_elites:0 "Republic of Texas"
-  TEX_proper_stateflag_elites_ADJ:0 "epublic of Texas"
-  TEX_proper_stateflag_elites_DEF:0 "the Republic of Texas"
-  TEX_proper_stateflag_intellectuals:0 "Republic of Texas"
-  TEX_proper_stateflag_intellectuals_ADJ:0 "Republic of Texas"
-  TEX_proper_stateflag_intellectuals_DEF:0 "the Republic of Texas"
-  TEX_proper_stateflag_people:0 "Republic of Texas"
-  TEX_proper_stateflag_people_ADJ:0 "Republic of Texas"
-  TEX_proper_stateflag_people_DEF:0 "the Republic of Texas"
-  TEX_proper_stateflag_ruler:0 "Republic of Texas"
-  TEX_proper_stateflag_ruler_ADJ:0 "Republic of Texas"
-  TEX_proper_stateflag_ruler_DEF:0 "the Republic of Texas"
-
-
-
 ### Eighties
 
   EHT_THN_elites:0 "Thunderbirds"
@@ -1897,3 +1791,57 @@
   ACH_southern_territories_ruler:0 "Texan Southern Territories"
   ACH_southern_territories_ruler_ADJ:0 "Texan Southern Territories"
   ACH_southern_territories_ruler_DEF:0 "the Texan Southern Territories"
+
+  TEX_provisional_elites:0 "Provisional Republic of Texas"
+  TEX_provisional_elites_ADJ:0 "Provisional Republic of Texas"
+  TEX_provisional_elites_DEF:0 "the Provisional Republic of Texas"
+  TEX_provisional_intellectuals:0 "Provisional Republic of Texas"
+  TEX_provisional_intellectuals_ADJ:0 "Provisional Republic of Texas"
+  TEX_provisional_intellectuals_DEF:0 "the Provisional Republic of Texas"
+  TEX_provisional_people:0 "Provisional Republic of Texas"
+  TEX_provisional_people_ADJ:0 "Provisional Republic of Texas"
+  TEX_provisional_people_DEF:0 "the Provisional Republic of Texas"
+  TEX_provisional_ruler:0 "Provisional Republic of Texas"
+  TEX_provisional_ruler_ADJ:0 "Provisional Republic of Texas"
+  TEX_provisional_ruler_DEF:0 "the Provisional Republic of Texas"
+
+  TEX_proper_elites:0 "Republic of Texas"
+  TEX_proper_elites_ADJ:0 "epublic of Texas"
+  TEX_proper_elites_DEF:0 "the Republic of Texas"
+  TEX_proper_intellectuals:0 "Republic of Texas"
+  TEX_proper_intellectuals_ADJ:0 "Republic of Texas"
+  TEX_proper_intellectuals_DEF:0 "the Republic of Texas"
+  TEX_proper_people:0 "Republic of Texas"
+  TEX_proper_people_ADJ:0 "Republic of Texas"
+  TEX_proper_people_DEF:0 "the Republic of Texas"
+  TEX_proper_ruler:0 "Republic of Texas"
+  TEX_proper_ruler_ADJ:0 "Republic of Texas"
+  TEX_proper_ruler_DEF:0 "the Republic of Texas"
+
+### MAP NO NAME
+
+  # TEX_provisional_elites:0 "   "
+  # TEX_provisional_elites_ADJ:0 "   "
+  # TEX_provisional_elites_DEF:0 "   "
+  # TEX_provisional_intellectuals:0 "   "
+  # TEX_provisional_intellectuals_ADJ:0 "   "
+  # TEX_provisional_intellectuals_DEF:0 "   "
+  # TEX_provisional_people:0 "   "
+  # TEX_provisional_people_ADJ:0 "   "
+  # TEX_provisional_people_DEF:0 "   "
+  # TEX_provisional_ruler:0 "   "
+  # TEX_provisional_ruler_ADJ:0 "   "
+  # TEX_provisional_ruler_DEF:0 "   "
+
+  # TEX_proper_elites:0 "   "
+  # TEX_proper_elites_ADJ:0 "   "
+  # TEX_proper_elites_DEF:0 "   "
+  # TEX_proper_intellectuals:0 "   "
+  # TEX_proper_intellectuals_ADJ:0 "   "
+  # TEX_proper_intellectuals_DEF:0 "   "
+  # TEX_proper_people:0 "   "
+  # TEX_proper_people_ADJ:0 "   "
+  # TEX_proper_people_DEF:0 "   "
+  # TEX_proper_ruler:0 "   "
+  # TEX_proper_ruler_ADJ:0 "   "
+  # TEX_proper_ruler_DEF:0 "   "
