--- a/localisation/english/fallout_countries2_l_english.yml
+++ b/localisation/english/fallout_countries2_l_english.yml
@@ -124,57 +124,6 @@
   LUM_ruler:0 "Luminous Ones"
   LUM_ruler_ADJ:0 "Luminous Ones"
   LUM_ruler_DEF:0 "Luminous Ones"
-  TBH_elites:0 "Texan Brotherhood"
-  TBH_elites_ADJ:0 "Texan Brotherhood"
-  TBH_elites_DEF:0 "the Texan Brotherhood"
-  TBH_intellectuals:0 "Texan Brotherhood"
-  TBH_intellectuals_ADJ:0 "Texan Brotherhood"
-  TBH_intellectuals_DEF:0 "the Texan Brotherhood"
-  TBH_people:0 "Texan Brotherhood"
-  TBH_people_ADJ:0 "Texan Brotherhood"
-  TBH_people_DEF:0 "the Texan Brotherhood"
-  TBH_ruler:0 "Texan Brotherhood"
-  TBH_ruler_ADJ:0 "Texan Brotherhood"
-  TBH_ruler_DEF:0 "the Texan Brotherhood"
-
-  TLT_elites:0 "Texan Louisiana Territories"
-  TLT_elites_ADJ:0 "Texan Louisiana Territories"
-  TLT_elites_DEF:0 "Texan Louisiana Territories"
-  TLT_intellectuals:0 "Texan Louisiana Territories"
-  TLT_intellectuals_ADJ:0 "Texan Louisiana Territories"
-  TLT_intellectuals_DEF:0 "the Texan Louisiana Territories"
-  TLT_people:0 "Texan Louisiana Territories"
-  TLT_people_ADJ:0 "Texan Louisiana Territories"
-  TLT_people_DEF:0 "the Texan Louisiana Territories"
-  TLT_ruler:0 "Texan Louisiana Territories"
-  TLT_ruler_ADJ:0 "Texan Louisiana Territories"
-  TLT_ruler_DEF:0 "the Texan Louisiana Territories"
-
-  UOA_elites:0 "Unity of Austin"
-  UOA_elites_ADJ:0 "Unity of Austin"
-  UOA_elites_DEF:0 "Unity of Austin"
-  UOA_intellectuals:0 "Unity of Austin"
-  UOA_intellectuals_ADJ:0 "Unity of Austin"
-  UOA_intellectuals_DEF:0 "Unity of Austin"
-  UOA_people:0 "Unity of Austin"
-  UOA_people_ADJ:0 "Unity of Austin"
-  UOA_people_DEF:0 "Unity of Austin"
-  UOA_ruler:0 "Crusher's Army"
-  UOA_ruler_ADJ:0 "Crusher's Army"
-  UOA_ruler_DEF:0 "Crusher's Army"
-
-  TPM_elites:0 "The Patrolmen"
-  TPM_elites_ADJ:0 "The Patrolmen"
-  TPM_elites_DEF:0 "the Patrolmen"
-  TPM_intellectuals:0 "The Patrolmen"
-  TPM_intellectuals_ADJ:0 "The Patrolmen"
-  TPM_intellectuals_DEF:0 "the Patrolmen"
-  TPM_people:0 "The Patrolmen"
-  TPM_people_ADJ:0 "The Patrolmen"
-  TPM_people_DEF:0 "the Patrolmen"
-  TPM_ruler:0 "The Patrolmen"
-  TPM_ruler_ADJ:0 "The Patrolmen"
-  TPM_ruler_DEF:0 "the Patrolmen"
 
   BAM_elites:0 "Bayou Motors"
   BAM_elites_ADJ:0 "Bayou Motors"
@@ -1700,8 +1649,46 @@
   LTR_intellectuals_ADJ:0 "Louisiana Tribals"
   LTR_intellectuals_DEF:0 "Louisiana Tribals"
 
+### TEXAS REWORK
 
+  TLT_elites:0 "Texan Louisiana Territories"
+  TLT_elites_ADJ:0 "Texan Louisiana Territories"
+  TLT_elites_DEF:0 "Texan Louisiana Territories"
+  TLT_intellectuals:0 "Texan Louisiana Territories"
+  TLT_intellectuals_ADJ:0 "Texan Louisiana Territories"
+  TLT_intellectuals_DEF:0 "the Texan Louisiana Territories"
+  TLT_people:0 "Texan Louisiana Territories"
+  TLT_people_ADJ:0 "Texan Louisiana Territories"
+  TLT_people_DEF:0 "the Texan Louisiana Territories"
+  TLT_ruler:0 "Texan Louisiana Territories"
+  TLT_ruler_ADJ:0 "Texan Louisiana Territories"
+  TLT_ruler_DEF:0 "the Texan Louisiana Territories"
 
+  UOA_elites:0 "Unity of Austin"
+  UOA_elites_ADJ:0 "Unity of Austin"
+  UOA_elites_DEF:0 "Unity of Austin"
+  UOA_intellectuals:0 "Unity of Austin"
+  UOA_intellectuals_ADJ:0 "Unity of Austin"
+  UOA_intellectuals_DEF:0 "Unity of Austin"
+  UOA_people:0 "Unity of Austin"
+  UOA_people_ADJ:0 "Unity of Austin"
+  UOA_people_DEF:0 "Unity of Austin"
+  UOA_ruler:0 "Crusher's Army"
+  UOA_ruler_ADJ:0 "Crusher's Army"
+  UOA_ruler_DEF:0 "Crusher's Army"
+
+  TPM_elites:0 "The Patrolmen"
+  TPM_elites_ADJ:0 "The Patrolmen"
+  TPM_elites_DEF:0 "the Patrolmen"
+  TPM_intellectuals:0 "The Patrolmen"
+  TPM_intellectuals_ADJ:0 "The Patrolmen"
+  TPM_intellectuals_DEF:0 "the Patrolmen"
+  TPM_people:0 "The Patrolmen"
+  TPM_people_ADJ:0 "The Patrolmen"
+  TPM_people_DEF:0 "the Patrolmen"
+  TPM_ruler:0 "The Patrolmen"
+  TPM_ruler_ADJ:0 "The Patrolmen"
+  TPM_ruler_DEF:0 "the Patrolmen"
 
 
   #_elites:0 ""
