it didnt save everything

--- a/localisation/english/TEXAS/ideas_texas_rework_l_english.yml
+++ b/localisation/english/TEXAS/ideas_texas_rework_l_english.yml
@@ -22,3 +22,6 @@
 
   history_of_big_population: "Historically Large Population"
   history_of_big_population_desc: ""
+
+  texas_rework_progress_act: "Texas Progress Act"
+  texas_rework_progress_act_desc: "The Texas Progress Act (also called the money furnace or the never-ending science budget), was pioneered by Keats in 2266, and allows for an unlimited amount of money to be spent on projects that will progress the scientific capabilities and educational level of constituent members of The Texas Economic Union. §RThis idea will improve over time as the beneficiaries of The Texas Progress Act enter into adulthood§!"
