--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1411,3 +1411,4 @@
   VICTORY_POINTS_12042:0 "Clarksville"
   VICTORY_POINTS_788:0 "Galveston"
   VICTORY_POINTS_11556:0 "The Temple"
+  VICTORY_POINTS_11995:0 "McKinney"
